--- a/_posts/2018-12-22-distill.md
+++ b/_posts/2018-12-22-distill.md
@@ -7,7 +7,7 @@ date: 2021-05-22
 featured: true
 
 authors:
-  - name: Albert Einstein
+  - name: Ke Li
     url: "https://en.wikipedia.org/wiki/Albert_Einstein"
     affiliations:
       name: IAS, Princeton
